banner section add

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,7 @@
 /* header section  */
 .nav {
 	padding-top: 50px;
+	padding-bottom: 65px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -65,4 +66,56 @@
 	font-size: 16px;
 	font-weight: 500;
 	color: #707070;
+}
+/* banner section */
+.banner {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-top: 30px;
+	padding-left: 40px;
+	gap: 40px;
+	background-color: #feeae9;
+}
+
+.banner-heading {
+	font-size: 56px;
+	font-weight: 700;
+	color: #1f1f1f;
+}
+.banner-paragraph {
+	max-width: 60%;
+	font-size: 16px;
+	flex-direction: 400;
+	color: #4e4e4e;
+	margin: 10px 0;
+}
+.banner-price {
+	font-size: 41px;
+	font-weight: 500;
+	color: #ff136f;
+}
+.banner-btn {
+	margin-top: 10px;
+	padding: 16px 28px;
+	background: linear-gradient(
+		180deg,
+		rgb(255, 88, 155) -0.006%,
+		rgb(255, 19, 111) 99.994%
+	);
+	color: #ffffff;
+	font-size: 18;
+	font-weight: 500;
+	border: none;
+	border-radius: 8px;
+	/*  */
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+.btn-arrow {
+	font-size: 18px;
+}
+.banner-img {
+	max-width: 100%;
 }
