--- a/styles/style.css
+++ b/styles/style.css
@@ -15,12 +15,11 @@
 .container {
 	max-width: 1440px;
 	margin: 0 auto;
-	border: 1px solid red;
+	background-color: #da1d1d32;
 }
 .content-area {
 	max-width: 1240px;
 	margin: 0 auto;
-	border: 1px solid palegreen;
 }
 /* header section  */
 .nav {
@@ -118,4 +117,131 @@
 }
 .banner-img {
 	max-width: 100%;
+}
+/* categories */
+.categories {
+	padding: 64px 45px;
+}
+.categorie-heading {
+	font-size: 36px;
+	font-weight: 600;
+	color: #1f1f1f;
+	margin-bottom: 24px;
+}
+.categories-card-container {
+	display: flex;
+	justify-content: space-between;
+	gap: 26px;
+	width: 100%;
+}
+.categories-card-text {
+	font-size: 36px;
+	font-weight: 500;
+	color: #ffffff;
+}
+.categories-card {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex: 1;
+	border-radius: 8px;
+	padding: 33px 46px;
+}
+.categories-card:nth-child(1) {
+	background: linear-gradient(
+		151.85deg,
+		rgb(255, 156, 53) 14.537%,
+		rgb(255, 208, 25) 84.486%
+	);
+}
+.categories-card:nth-child(2) {
+	background: linear-gradient(
+		180deg,
+		rgb(255, 88, 155) -0.006%,
+		rgb(255, 19, 111) 99.994%
+	);
+}
+.categories-card:nth-child(3) {
+	background: linear-gradient(
+		170.38deg,
+		rgb(66, 137, 255) 15.416%,
+		rgb(63, 7, 248) 74.29%
+	);
+}
+/* shoes-section */
+.shoes-section {
+	background-color: rgb(244, 244, 244);
+	padding: 64px 45px;
+}
+.heading {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.see-all {
+	color: #ff9d00;
+	font-size: 20px;
+	font-weight: 500;
+}
+.shoes-card {
+	display: flex;
+	justify-content: space-between;
+	gap: 24px;
+}
+/* card */
+.card {
+	background-color: #ffffff;
+	padding: 24px;
+	border-radius: 20px;
+	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
+}
+.card-img > img {
+	width: 100%;
+	height: 100%;
+}
+.card-title {
+	color: #1f1f1f;
+	font-size: 24px;
+	font-weight: 600;
+}
+
+.card-paragraph {
+	color: #4e4e4e;
+	font-size: 16px;
+	font-weight: 400;
+	margin: 16px 0;
+}
+.card-price {
+	color: #1f1f1f;
+	font-size: 24px;
+	font-weight: 500;
+	text-align: center;
+}
+/*  */
+/*  */
+.card-btn {
+	margin-top: 10px;
+	padding: 16px 28px;
+	background-color: #000000;
+	color: #ffffff;
+	font-size: 18;
+	font-weight: 500;
+	border: none;
+	border-radius: 8px;
+	/*  */
+	display: flex;
+
+	align-items: center;
+	gap: 10px;
+}
+.btn-card-content {
+	display: flex;
+	justify-content: center;
+	margin-top: 16px;
+}
+/*  */
+.bag-img {
+	width: 100%;
+	height: 280px;
+	margin-bottom: 20px;
 }
