--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,6 @@
 .container {
 	max-width: 1440px;
 	margin: 0 auto;
-	background-color: #da1d1d32;
 }
 .content-area {
 	max-width: 1240px;
@@ -244,4 +243,61 @@
 	width: 100%;
 	height: 280px;
 	margin-bottom: 20px;
+}
+/* footer section */
+
+.footer-section {
+	padding: 75px 0;
+	background-color: #ffffff;
+}
+.footer-content {
+	margin: 0 45px;
+	padding: 145px 260px;
+	background-color: #fff2f1;
+	border-radius: 8px;
+	text-align: center;
+}
+.footer-title {
+	font-size: 30px;
+	font-weight: 600;
+	color: #1f1f1f;
+}
+.footer-paragraph {
+	font-size: 16px;
+	font-weight: 500;
+	color: #707070;
+	margin: 15px 0;
+}
+.footer-inp-btn {
+	display: flex;
+	justify-content: center;
+}
+.footer-inp-btn input[type] {
+	padding-top: 15px;
+	padding-bottom: 15px;
+	padding-left: 35px;
+	width: 100%;
+	border: none;
+	/*  */
+	border-top-left-radius: 8px;
+	border-bottom-left-radius: 8px;
+}
+.footer-inp-btn input[placeholder] {
+	color: #cccccc;
+	font-size: 24px;
+	font-weight: 400;
+}
+.footer-inp-btn button {
+	padding: 21px 45px;
+	border: none;
+	background: linear-gradient(
+		180deg,
+		rgb(255, 88, 155) 0.004%,
+		rgb(255, 19, 111) 100.004%
+	);
+	font-size: 24px;
+	font-weight: 500;
+	/*  */
+	border-top-right-radius: 8px;
+	border-bottom-right-radius: 8px;
 }
